WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201959
LibWebRTCProvider does not need sessionIDs anymore
https://bugs.webkit.org/show_bug.cgi?id=201959
Summary
LibWebRTCProvider does not need sessionIDs anymore
Chris Dumez
Reported
2019-09-18 18:24:18 PDT
LibWebRTCProvider does not need sessionIDs anymore, now that we have a single session per WebProcess.
Attachments
Patch
(7.88 KB, patch)
2019-09-18 18:36 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-18 18:36:05 PDT
Created
attachment 379092
[details]
Patch
Geoffrey Garen
Comment 2
2019-09-18 19:30:33 PDT
Comment on
attachment 379092
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-09-18 20:27:06 PDT
Comment on
attachment 379092
[details]
Patch Clearing flags on attachment: 379092 Committed
r250078
: <
https://trac.webkit.org/changeset/250078
>
WebKit Commit Bot
Comment 4
2019-09-18 20:27:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-09-18 20:28:18 PDT
<
rdar://problem/55504935
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug