LibWebRTCProvider does not need sessionIDs anymore https://bugs.webkit.org/show_bug.cgi?id=201959

Reviewed by Geoffrey Garen.

LibWebRTCProvider does not need sessionIDs anymore, now that we have a single session per WebProcess.

Source/WebCore:

* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::registerMDNSName):
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::setConfiguration):
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:

Source/WebKit:

* WebProcess/Network/webrtc/LibWebRTCProvider.cpp:
(WebKit::LibWebRTCProvider::registerMDNSName):
(WebKit::LibWebRTCProvider::createSocketFactory):
* WebProcess/Network/webrtc/LibWebRTCProvider.h:


Canonical link: https://commits.webkit.org/215596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250078 268f45cc-cd09-0410-ab3c-d52691b4dbfc